--- a/index.html
+++ b/index.html
@@ -56,14 +56,11 @@ td,th{border:1px solid white;padding:6px 10px}
 <tbody id="caseStats"></tbody>
 </table>
 
-<h2>公式统计</h2>
-<table>
-<tr><th>Case</th><th>公式</th><th>正确</th><th>错误</th><th>正确率</th></tr>
-<tbody id="algStats"></tbody>
-</table>
-
 <br>
 <button onclick="resetStats()">清空统计</button>
+
+<br>
+<div class="small">公式提供2011CAOS01</div>
 </div>
 
 <script>
@@ -193,18 +190,15 @@ const AS_cases=[
 ]
 
 // ===== 初始化 =====
-let statsCase={},statsAlg={}
+let statsCase={}
 function initStats(){
 ["H","Pi","T","L","U","S","AS"].forEach(c=>statsCase[c]={correct:0,wrong:0})
-;[...H_cases,...Pi_cases,...T_cases,...L_cases,...U_cases,...S_cases,...AS_cases].forEach(cs=>{
-cs.algs.forEach(a=>statsAlg[a]={case:cs.name.replace(/[0-9]/g,''),correct:0,wrong:0})
-})
-for(let c in algs)
-algs[c].forEach(a=>statsAlg[a]={case:c,correct:0,wrong:0})
 }
 
 let lastHCase="",lastPiCase="",lastTCase="",lastLCase="",lastUCase="",lastSCase="",lastASCase="",lastAlg=""
 let currentAlg="",currentCase="",currentScramble=""
+let lastCase=""
+let lastSubCase=""
 
 function invertAlg(alg){
 return alg.split(" ").reverse().map(m=>{
@@ -225,37 +219,66 @@ return Array.from(document.querySelectorAll("input:checked")).map(b=>b.value)
 }
 
 function nextScramble(){
-let pool=[]
-getSelectedCases().forEach(c=>{
-if(c==="H"){let chosen=H_cases[Math.floor(Math.random()*H_cases.length)]
-let alg=chosen.algs[Math.floor(Math.random()*chosen.algs.length)]
-lastHCase=chosen.name;pool.push({case:"H",alg})}
-else if(c==="Pi"){let chosen=Pi_cases[Math.floor(Math.random()*Pi_cases.length)]
-let alg=chosen.algs[Math.floor(Math.random()*chosen.algs.length)]
-lastPiCase=chosen.name;pool.push({case:"Pi",alg})}
-else if(c==="T"){let chosen=T_cases[Math.floor(Math.random()*T_cases.length)]
-let alg=chosen.algs[Math.floor(Math.random()*chosen.algs.length)]
-lastTCase=chosen.name;pool.push({case:"T",alg})}
-else if(c==="L"){let chosen=L_cases[Math.floor(Math.random()*L_cases.length)]
-let alg=chosen.algs[Math.floor(Math.random()*chosen.algs.length)]
-lastLCase=chosen.name;pool.push({case:"L",alg})}
-else if(c==="U"){let chosen=U_cases[Math.floor(Math.random()*U_cases.length)]
-let alg=chosen.algs[Math.floor(Math.random()*chosen.algs.length)]
-lastUCase=chosen.name;pool.push({case:"U",alg})}
-else if(c==="S"){let chosen=S_cases[Math.floor(Math.random()*S_cases.length)]
-let alg=chosen.algs[Math.floor(Math.random()*chosen.algs.length)]
-lastSCase=chosen.name;pool.push({case:"S",alg})}
-else if(c==="AS"){let chosen=AS_cases[Math.floor(Math.random()*AS_cases.length)]
-let alg=chosen.algs[Math.floor(Math.random()*chosen.algs.length)]
-lastASCase=chosen.name;pool.push({case:"AS",alg})}
-else{algs[c].forEach(a=>pool.push({case:c,alg:a}))}
-})
 
-let r=pool[Math.floor(Math.random()*pool.length)]
+let selected=getSelectedCases()
+if(selected.length==0)return
+
+let r
+let tries=0
+
+do{
+let c=selected[Math.floor(Math.random()*selected.length)]
+
+let chosen,alg
+
+if(c==="H"){
+chosen=H_cases[Math.floor(Math.random()*H_cases.length)]
+alg=chosen.algs[Math.floor(Math.random()*chosen.algs.length)]
+lastHCase=chosen.name
+}
+else if(c==="Pi"){
+chosen=Pi_cases[Math.floor(Math.random()*Pi_cases.length)]
+alg=chosen.algs[Math.floor(Math.random()*chosen.algs.length)]
+lastPiCase=chosen.name
+}
+else if(c==="T"){
+chosen=T_cases[Math.floor(Math.random()*T_cases.length)]
+alg=chosen.algs[Math.floor(Math.random()*chosen.algs.length)]
+lastTCase=chosen.name
+}
+else if(c==="L"){
+chosen=L_cases[Math.floor(Math.random()*L_cases.length)]
+alg=chosen.algs[Math.floor(Math.random()*chosen.algs.length)]
+lastLCase=chosen.name
+}
+else if(c==="U"){
+chosen=U_cases[Math.floor(Math.random()*U_cases.length)]
+alg=chosen.algs[Math.floor(Math.random()*chosen.algs.length)]
+lastUCase=chosen.name
+}
+else if(c==="S"){
+chosen=S_cases[Math.floor(Math.random()*S_cases.length)]
+alg=chosen.algs[Math.floor(Math.random()*chosen.algs.length)]
+lastSCase=chosen.name
+}
+else if(c==="AS"){
+chosen=AS_cases[Math.floor(Math.random()*AS_cases.length)]
+alg=chosen.algs[Math.floor(Math.random()*chosen.algs.length)]
+lastASCase=chosen.name
+}
+
+r={case:c,alg:alg,name:chosen.name}
+
+tries++
+
+}while(r.name===lastSubCase && tries<20)
+
 currentAlg=r.alg
 currentCase=r.case
 currentScramble=invertAlg(r.alg)
-lastAlg=currentAlg
+
+lastCase=currentCase
+lastSubCase=r.name
 
 document.getElementById("shape").innerText="形状: "+r.case
 document.getElementById("scramble").innerText=currentScramble
@@ -264,7 +287,6 @@ document.getElementById("result").innerText=""
 
 function correct(){
 statsCase[currentCase].correct++
-statsAlg[currentAlg].correct++
 saveStats()
 document.getElementById("result").innerText="蒸蚌"
 updateStats()
@@ -273,7 +295,6 @@ setTimeout(nextScramble,2500)
 
 function wrong(){
 statsCase[currentCase].wrong++
-statsAlg[currentAlg].wrong++
 saveStats()
 
 let showAlg=currentAlg
@@ -318,24 +339,17 @@ caseHTML+=`<tr><td>${c}</td><td>${d.correct}</td><td>${d.wrong}</td><td class="p
 }
 document.getElementById("caseStats").innerHTML=caseHTML
 
-let algHTML=""
-for(let a in statsAlg){
-let d=statsAlg[a]
-algHTML+=`<tr><td>${d.case}</td><td class="small">${a}</td><td>${d.correct}</td><td>${d.wrong}</td><td class="percent">${percent(d.correct,d.wrong)}</td></tr>`
-}
-document.getElementById("algStats").innerHTML=algHTML
 }
 
 function saveStats(){
 localStorage.setItem("eg1_case",JSON.stringify(statsCase))
-localStorage.setItem("eg1_alg",JSON.stringify(statsAlg))
 }
 function loadStats(){
 let c=localStorage.getItem("eg1_case")
-let a=localStorage.getItem("eg1_alg")
-if(c&&a){statsCase=JSON.parse(c);statsAlg=JSON.parse(a)}
+if(c) statsCase=JSON.parse(c)
 else initStats()
 }
+
 function resetStats(){localStorage.clear();initStats();updateStats()}
 
 function copyScramble(){
@@ -355,3 +369,7 @@ nextScramble()
 </script>
 </body>
 </html>
+</script>
+</body>
+</html>
+
