--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ const H_cases=[
 
 const Pi_cases=[
 {name:"Pi1",algs:["F U' R' F R U' F2 R U R'","R2 B2 R' U R' U' R U2 R U' R2"]},
-{name:"Pi2",algs:["R U R2 F' R2 U R'","R U' R2 F R2 U' R"]},
+{name:"Pi2",algs:["R U R2 F' R2 U R'","R U' R2 F R2 U' R'"]},
 {name:"Pi3",algs:["F' R U2 R' F' U2 F R' F' R"]},
 {name:"Pi4",algs:["R' F R U' R' F R F' R' F R","F' R U R' U' R U R' F' R U R'","F R' F' R U R' F' R F R' F' R"]},
 {name:"Pi5",algs:["F R U' R' U' F' R U R2 F' R","F U' R U2 R' F' R U R' F'","F' R' F R F' R' F2 R U' F"]},
@@ -369,7 +369,3 @@ nextScramble()
 </script>
 </body>
 </html>
-</script>
-</body>
-</html>
-
