--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@ td,th{border:1px solid white;padding:6px 10px}
 <button onclick="wrong()">做错了</button>
 
 <div id="result"></div>
+
+<div class="small" style="margin-top:18px;line-height:1.6;">
+使用说明：勾选需要练习的EG1case后点击下一条刷新<br>
+练习时点击做对了1坤秒后自动切换下一条打乱
+</div>
+
 </div>
 
 <div id="page2" class="hidden">
