--- a/index.html
+++ b/index.html
@@ -142,17 +142,17 @@ const H_cases=[
 ]
 
 const Pi_cases=[
-{name:"Pi1",algs:["F U' R' F R U' F2 R U R'","R2 B2 R' U R' U' R U2 R U' R2"]},
+{name:"Pi1",algs:["F U' R' F R U' F2 R U R'"]},
 {name:"Pi2",algs:["R U R2 F' R2 U R'","R U' R2 F R2 U' R'"]},
 {name:"Pi3",algs:["F' R U2 R' F' U2 F R' F' R"]},
 {name:"Pi4",algs:["R' F R U' R' F R F' R' F R","F' R U R' U' R U R' F' R U R'","F R' F' R U R' F' R F R' F' R"]},
 {name:"Pi5",algs:["F R U' R' U' F' R U R2 F' R","F U' R U2 R' F' R U R' F'","F' R' F R F' R' F2 R U' F"]},
-{name:"Pi6",algs:["R' F' R U' R' F R2 U R' F' R U R'","F R U' R' F R U2 R' U F'","F' U R' F2 R F R' F' R F","F' R' F R U F R' F' R2 U R'"]}
+{name:"Pi6",algs:["F R U' R' F R U2 R' U F'","F' U R' F2 R F R' F' R F","F' R' F R U F R' F' R2 U R'"]}
 ]
 
 const T_cases=[
-{name:"T1",algs:["F R U' R2 F' R U R' F' R","R U' R2 F R2 U R' U2 R' F R F'","R U2 R' U' R' F' R F R' F' R"]},
-{name:"T2",algs:["R U' R' U2 R U2 R' F R U' R'","R U R' F' U2 R U R' U' R U R'","R' F2 R U R U R' F' R U R'"]},
+{name:"T1",algs:["R U' R2 F R2 U R' U2 R' F R F'","R U2 R' U' R' F' R F R' F' R"]},
+{name:"T2",algs:["R U' R' U2 R U2 R' F R U' R'","R U R' F' U2 R U R' U' R U R'"]},
 {name:"T3",algs:["R U2 R' U' R' F' R2 U R'","R' F R2 U' R' U' R' F2 R","R' F2 R U R U R2 F' R"]},
 {name:"T4",algs:["R' F R F' U R U' R' U' R' F' R F"]},
 {name:"T5",algs:["R U2 R2 F R2 U' R' F' R U R'","R' F' R2 U R' F' R U R'","R' F2 R2 U' R2 F R F R' F' R"]},
@@ -160,12 +160,12 @@ const T_cases=[
 ]
 
 const L_cases=[
-{name:"L1",algs:["R U' R' U R U' R2 F' R F","R U R' F' R U R' U' F R' F'"]},
-{name:"L2",algs:["R U2 R' F R U' R2 F' R","R' F R2 U' R' U R U' R' F"]},
-{name:"L3",algs:["R' U R2 U' R2 U' F R2 U' R'","F R' F' R U R' F' R2 U R'"]},
-{name:"L4",algs:["L' U L U' L' U L2 F L' F'","L' U' L F L' U' L U F' L F L'"]},
-{name:"L5",algs:["R U' R' U R U' R' U R' F' R F","F' R' F R2 U R' U' F R' F' R"]},
-{name:"L6",algs:["R U R' F R U' R' F R F'","R' F2 R U' R U R' F' R U' R'"]}
+{name:"L1",algs:["R U R' F' R U2 R' U2 R U R' ","R U' R' F R U' R' U' R' F2 R"]},
+{name:"L2",algs:["F' R' F R F R' F' R F R' F' R","R' F R F' R' F R U R U2 R'"]},
+{name:"L3",algs:["R U R2 F' U R2 U R2 U' R"]},
+{name:"L4",algs:["R' F R2 U R' F' R U2 R'","R' F2 R F' R' F R2 U R'"]},
+{name:"L5",algs:["R U R' F' R U R' U' F R' F' R","F' R' F R U' R U R' U' R U R'"]},
+{name:"L6",algs:["R' F' R F U' R' F' R U R' F' R","F R U' R' U R' F' R U R' F' R"]}
 ]
 
 const U_cases=[
