--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@ const T_cases=[
 ]
 
 const L_cases=[
-{name:"L1",algs:["R U R' F' R U2 R' U2 R U R' ","R U' R' F R U' R' U' R' F2 R"]},
-{name:"L2",algs:["F' R' F R F R' F' R F R' F' R","R' F R F' R' F R U R U2 R'"]},
+{name:"L1",algs:["R U R' F' R U2 R' U2 R U R'","R U' R' F R U' R' U' R' F2 R"]},
+{name:"L2",algs:["F' R' F R F R' F' R F R' F' R","R' 5F R F' R' F R U R U2 R'"]},
 {name:"L3",algs:["R U R2 F' U R2 U R2 U' R"]},
 {name:"L4",algs:["R' F R2 U R' F' R U2 R'","R' F2 R F' R' F R2 U R'"]},
 {name:"L5",algs:["R U R' F' R U R' U' F R' F' R","F' R' F R U' R U R' U' R U R'"]},
@@ -375,3 +375,4 @@ nextScramble()
 </script>
 </body>
 </html>
+
